--- a/src/main/resources/static/css/base/_reset.scss
+++ b/src/main/resources/static/css/base/_reset.scss
@@ -15,14 +15,14 @@
     padding: 0;
     list-style: none;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 }
 
 a {
     cursor: pointer;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     color: #000000;
 }
 
