--- a/src/main/resources/static/css/components/_button.scss
+++ b/src/main/resources/static/css/components/_button.scss
@@ -1,239 +1,66 @@
-/* button start */
-
-// button
-button.black_btn {
+/*  start */
+.black_btn_w130_h40,
+.black_btn_w90_h40,
+.black_btn_w65_h30 {
     display: inline-block;
+    padding: 10px 8px 10px 8px;
+    font-size: 13px;
+    border: 1px solid transparent;
+    vertical-align: middle;
+    text-align: center;
+    color: #fff;
+    background-color: #151515;
+    border-radius: 0 !important;
+
+    &:hover {
+        background-color: #474747;
+    }
+}
+
+.black_btn_w130_h40 {
     width: 130px;
     height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid transparent;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
-
-    &:hover {
-        background-color: #474747;
-    }
 }
 
-button.black_btn_sm {
-    display: inline-block;
+.black_btn_w90_h40 {
     width: 90px;
     height: 40px;
+}
+
+.black_btn_w65_h30 {
+    width: 65px;
+    height: 30px;
+}
+
+.white_btn_w130_h40,
+.white_btn_w90_h40,
+.white_btn_w65_h30 {
+    display: inline-block;
     padding: 10px 8px 10px 8px;
     font-size: 13px;
-    border: 1px solid transparent;
+    border: 1px solid #e2e2e2;
     vertical-align: middle;
     text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
+    color: #222;
+    background-color: #fff;
+    border-radius: 0px !important;
 
     &:hover {
-        background-color: #474747;
+        border: 1px solid black;
     }
 }
 
-button.white_btn {
-    display: inline-block;
+.white_btn_w130_h40 {
     width: 130px;
     height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-
-    &:hover {
-        border: 1px solid black;
-    }
 }
 
-button.white_btn_sm {
-    display: inline-block;
+.white_btn_w90_h40 {
     width: 90px;
     height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-
-    &:hover {
-        border: 1px solid black;
-    }
 }
 
-button.black_btn_w90_h40 {
-    display: inline-block;
-    width: 90px;
-    height: 40px;
-    font-size: 12px;
-    border: 1px solid transparent;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
-
-    &:hover {
-        background-color: #474747;
-    }
-}
-
-button.white_btn_w90_h40 {
-    display: inline-block;
-    width: 90px;
-    height: 40px;
-    font-size: 12px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-
-    &:hover {
-        border: 1px solid black;
-    }
-}
-
-// a
-a.black_btn {
-    display: inline-block;
-    width: 130px;
-    height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0px !important;
-
-    &:hover {
-        background-color: #474747;
-    }
-}
-
-a.white_btn {
-    display: inline-block;
-    width: 130px;
-    height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-
-    &:hover {
-        border: 1px solid black;
-    }
-}
-
-a.black_btn_w90_h40 {
-    display: inline-block;
-    width: 90px;
-    height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 12px;
-    border: 1px solid transparent;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
-
-    &:hover {
-        background-color: #474747;
-    }
-}
-
-a.white_btn_w90_h40 {
-    display: inline-block;
-    width: 90px;
-    height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 12px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-
-    &:hover {
-        border: 1px solid black;
-    }
-}
-
-// label
-label.black_btn {
-    display: inline-block;
-    width: 130px;
-    height: 40px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid transparent;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
-    cursor: pointer;
-
-    &:hover {
-        background-color: #474747;
-    }
-}
-
-label.black_btn_sm {
-    display: inline-block;
-    width: 90px;
-    height: 25px;
-    padding: 10px 8px 10px 8px;
-    font-size: 13px;
-    border: 1px solid transparent;
-    vertical-align: middle;
-    text-align: center;
-    color: #fff;
-    background-color: #151515;
-    border-radius: 0 !important;
-    cursor: pointer;
-
-    &:hover {
-        background-color: #474747;
-    }
-}
-
-label.white_btn_sm {
-    display: inline-block;
-    width: 90px;
-    height: 25px;
-    padding: 4px 3px 4px 3px;
-    font-size: 11px;
-    border: 1px solid #e2e2e2;
-    vertical-align: middle;
-    text-align: center;
-    color: #222;
-    background-color: #fff;
-    border-radius: 0px !important;
-    cursor: pointer;
-
-    &:hover {
-        border: 1px solid black;
-    }
+.white_btn_w65_h30 {
+    width: 65px;
+    height: 30px;
 }
