--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -13,7 +13,7 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -21,7 +21,7 @@
 a {
   cursor: pointer;
   text-decoration: none;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #000000;
 }
 
@@ -52,227 +52,73 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-/* button start */
-button.black_btn {
+/*  start */
+.black_btn_w130_h40,
+.black_btn_w90_h40,
+.black_btn_w65_h30 {
   display: inline-block;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid transparent;
+  vertical-align: middle;
+  text-align: center;
+  color: #fff;
+  background-color: #151515;
+  border-radius: 0 !important;
+}
+.black_btn_w130_h40:hover,
+.black_btn_w90_h40:hover,
+.black_btn_w65_h30:hover {
+  background-color: #474747;
+}
+
+.black_btn_w130_h40 {
   width: 130px;
   height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-}
-button.black_btn:hover {
-  background-color: #474747;
 }
 
-button.black_btn_sm {
-  display: inline-block;
+.black_btn_w90_h40 {
   width: 90px;
   height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-}
-button.black_btn_sm:hover {
-  background-color: #474747;
 }
 
-button.white_btn {
+.black_btn_w65_h30 {
+  width: 65px;
+  height: 30px;
+}
+
+.white_btn_w130_h40,
+.white_btn_w90_h40,
+.white_btn_w65_h30 {
   display: inline-block;
+  padding: 10px 8px 10px 8px;
+  font-size: 13px;
+  border: 1px solid #e2e2e2;
+  vertical-align: middle;
+  text-align: center;
+  color: #222;
+  background-color: #fff;
+  border-radius: 0px !important;
+}
+.white_btn_w130_h40:hover,
+.white_btn_w90_h40:hover,
+.white_btn_w65_h30:hover {
+  border: 1px solid black;
+}
+
+.white_btn_w130_h40 {
   width: 130px;
   height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-}
-button.white_btn:hover {
-  border: 1px solid black;
 }
 
-button.white_btn_sm {
-  display: inline-block;
+.white_btn_w90_h40 {
   width: 90px;
   height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-}
-button.white_btn_sm:hover {
-  border: 1px solid black;
 }
 
-button.black_btn_w90_h40 {
-  display: inline-block;
-  width: 90px;
-  height: 40px;
-  font-size: 12px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-}
-button.black_btn_w90_h40:hover {
-  background-color: #474747;
-}
-
-button.white_btn_w90_h40 {
-  display: inline-block;
-  width: 90px;
-  height: 40px;
-  font-size: 12px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-}
-button.white_btn_w90_h40:hover {
-  border: 1px solid black;
-}
-
-a.black_btn {
-  display: inline-block;
-  width: 130px;
-  height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0px !important;
-}
-a.black_btn:hover {
-  background-color: #474747;
-}
-
-a.white_btn {
-  display: inline-block;
-  width: 130px;
-  height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-}
-a.white_btn:hover {
-  border: 1px solid black;
-}
-
-a.black_btn_w90_h40 {
-  display: inline-block;
-  width: 90px;
-  height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 12px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-}
-a.black_btn_w90_h40:hover {
-  background-color: #474747;
-}
-
-a.white_btn_w90_h40 {
-  display: inline-block;
-  width: 90px;
-  height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 12px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-}
-a.white_btn_w90_h40:hover {
-  border: 1px solid black;
-}
-
-label.black_btn {
-  display: inline-block;
-  width: 130px;
-  height: 40px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-  cursor: pointer;
-}
-label.black_btn:hover {
-  background-color: #474747;
-}
-
-label.black_btn_sm {
-  display: inline-block;
-  width: 90px;
-  height: 25px;
-  padding: 10px 8px 10px 8px;
-  font-size: 13px;
-  border: 1px solid transparent;
-  vertical-align: middle;
-  text-align: center;
-  color: #fff;
-  background-color: #151515;
-  border-radius: 0 !important;
-  cursor: pointer;
-}
-label.black_btn_sm:hover {
-  background-color: #474747;
-}
-
-label.white_btn_sm {
-  display: inline-block;
-  width: 90px;
-  height: 25px;
-  padding: 4px 3px 4px 3px;
-  font-size: 11px;
-  border: 1px solid #e2e2e2;
-  vertical-align: middle;
-  text-align: center;
-  color: #222;
-  background-color: #fff;
-  border-radius: 0px !important;
-  cursor: pointer;
-}
-label.white_btn_sm:hover {
-  border: 1px solid black;
+.white_btn_w65_h30 {
+  width: 65px;
+  height: 30px;
 }
 
 /* main start */
@@ -1209,6 +1055,9 @@ footer .footer_copyright {
 #items {
   overflow: hidden;
 }
+#items .items_header {
+  margin: 0px auto 60px;
+}
 #items .items_header h2 {
   font-size: 15px;
   text-align: center;
@@ -1664,6 +1513,9 @@ footer .footer_copyright {
   }
 }
 /* mypage page start */
+.mypage_header {
+  margin: 0px auto 60px;
+}
 .mypage_header h2 {
   font-size: 15px;
   text-align: center;
@@ -1772,6 +1624,9 @@ footer .footer_copyright {
 }
 
 /* orderlist page start */
+.orderlist_header {
+  margin: 0px auto 60px;
+}
 .orderlist_header h2 {
   font-size: 15px;
   text-align: center;
@@ -1829,6 +1684,9 @@ footer .footer_copyright {
 }
 
 /* profile page start */
+.modify_header {
+  margin: 0px auto 60px;
+}
 .modify_header h2 {
   font-size: 15px;
   text-align: center;
@@ -1989,6 +1847,9 @@ footer .footer_copyright {
   }
 }
 /* signUp page start */
+.signup_header {
+  margin: 0px auto 60px;
+}
 .signup_header h2 {
   font-size: 15px;
   text-align: center;
@@ -2210,7 +2071,6 @@ footer .footer_copyright {
 .item_dtl_body .info .item_price .title {
   display: inline-block;
   width: 20%;
-  margin: 7px 20px 7px 0;
   vertical-align: middle;
   font-size: 11px;
 }
@@ -2221,7 +2081,6 @@ footer .footer_copyright {
 .item_dtl_body .info .item_price .con {
   display: inline-block;
   width: auto;
-  margin: 7px 20px 7px 0;
   vertical-align: middle;
   font-size: 11px;
 }
@@ -2320,7 +2179,7 @@ footer .footer_copyright {
 }
 .item_dtl_body .info .item_option .item_cnt .con input {
   width: 30px;
-  height: 20px;
+  height: 25px;
   line-height: 20px;
   border: 1px solid #CCCCCC;
   border-top-left-radius: 2px;
@@ -2340,8 +2199,8 @@ footer .footer_copyright {
   background: transparent;
   outline: none;
   border: 1px solid #CCCCCC;
-  width: 20px;
-  height: 10px;
+  width: 25px;
+  height: 12.5px;
   text-align: center;
   vertical-align: middle;
   border-top-right-radius: 2px;
@@ -2382,4 +2241,154 @@ footer .footer_copyright {
   padding: 14px;
   font-size: 12px;
   letter-spacing: 1px;
+}
+
+.order_hist_header {
+  margin: 0px auto 60px;
+}
+.order_hist_header h2 {
+  font-size: 15px;
+  text-align: center;
+}
+.order_hist_header .divider {
+  width: 70px;
+  height: 1px;
+  background: #aaa;
+  margin: 20px auto;
+}
+
+.order_hist_body {
+  width: 100%;
+  margin: 0 auto;
+}
+.order_hist_body .title {
+  margin: 40px 0 10px 10px;
+}
+.order_hist_body .title h3 {
+  color: #353535;
+  font-size: 12px;
+  font-weight: bold;
+}
+.order_hist_body table {
+  table-layout: fixed;
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  position: relative;
+  margin: 10px 0 0;
+  border: 1px solid #e5e5e5;
+  border-top: 1px solid #e5e5e5;
+  border-right: none;
+  border-left: none;
+  line-height: 1.7;
+  font-size: 11px;
+  letter-spacing: 0em !important;
+  color: #353535;
+}
+.order_hist_body table thead tr th {
+  text-align: center;
+  padding: 15px 0 14px;
+  vertical-align: middle;
+  font-weight: normal;
+  background-color: #fff;
+}
+.order_hist_body table tbody tr td {
+  border-top: 1px solid #e5e5e5;
+  text-align: center;
+  padding: 15px 0;
+  height: 135px;
+}
+.order_hist_body table tbody tr td.order_date {
+  letter-spacing: -0.5px;
+}
+.order_hist_body table tbody tr td.thumb img {
+  width: 80px;
+  height: 110px;
+}
+.order_hist_body table tbody tr td.product .name a {
+  color: #353535 !important;
+}
+.order_hist_body table tbody tr td.product .option {
+  color: #757575;
+  margin-top: 9px;
+}
+.order_hist_body table tbody tr td.left_top {
+  text-align: left;
+  vertical-align: top;
+}
+.order_hist_body table tbody tr td.state {
+  color: #111111;
+}
+.order_hist_body table tbody tr td button {
+  font-size: 11px !important;
+  padding: 0 !important;
+}
+.order_hist_body table tbody.center {
+  text-align: center;
+}
+.order_hist_body p {
+  margin: -1px 0 0;
+  border-bottom: 1px solid #ddd;
+  padding: 50px 0;
+  text-align: center;
+  color: #757575;
+  font-weight: normal;
+  font-size: 12px;
+}
+.order_hist_body .pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.order_hist_body .pagination ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 20px;
+  line-height: 50px;
+  font-size: 13px;
+}
+.order_hist_body .pagination ul li {
+  margin: 0 15px;
+}
+.order_hist_body .pagination ul li a {
+  color: #999;
+}
+.order_hist_body .pagination ul li.disabled {
+  pointer-events: none;
+}
+.order_hist_body .pagination ul .page {
+  text-align: center;
+}
+.order_hist_body .pagination ul .page:hover a {
+  color: #000;
+  font-weight: bold;
+}
+.order_hist_body .pagination ul .page.active a {
+  color: #000;
+  font-weight: bold;
+  text-decoration-line: underline;
+}
+.order_hist_body .pagination ul .prev,
+.order_hist_body .pagination ul .next {
+  color: rgb(50, 50, 50);
+  font-size: 13px;
+}
+.order_hist_body .pagination ul .prev {
+  margin-right: 20px;
+}
+.order_hist_body .pagination ul .next {
+  margin-left: 20px;
 }
