--- a/src/main/resources/static/css/pages/_board.scss
+++ b/src/main/resources/static/css/pages/_board.scss
@@ -1,5 +1,7 @@
 /* board page start */
 .board_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
