--- a/src/main/resources/static/css/pages/_cart.scss
+++ b/src/main/resources/static/css/pages/_cart.scss
@@ -1,5 +1,7 @@
 /* cart page start */
 .cart_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
