--- a/src/main/resources/static/css/pages/_findId.scss
+++ b/src/main/resources/static/css/pages/_findId.scss
@@ -1,5 +1,7 @@
 /* findId page start */
 .find_id_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
