--- a/src/main/resources/static/css/pages/_item.scss
+++ b/src/main/resources/static/css/pages/_item.scss
@@ -1,5 +1,7 @@
 /* item page start */
 .item_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
