--- a/src/main/resources/static/css/pages/_main.scss
+++ b/src/main/resources/static/css/pages/_main.scss
@@ -3,6 +3,8 @@
     overflow: hidden;
 
     .items_header {
+        margin: 0px auto 60px;
+
         h2 {
             font-size: 15px;
             text-align: center;
