--- a/src/main/resources/static/css/pages/_profile.scss
+++ b/src/main/resources/static/css/pages/_profile.scss
@@ -1,5 +1,7 @@
 /* profile page start */
 .modify_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
