--- a/src/main/resources/static/css/pages/_wishlist.scss
+++ b/src/main/resources/static/css/pages/_wishlist.scss
@@ -1,5 +1,7 @@
 /* wishlist page start */
 .wishlist_header {
+    margin: 0px auto 60px;
+
     h2 {
         font-size: 15px;
         text-align: center;
