--- a/src/main/resources/templates/account/findId.html
+++ b/src/main/resources/templates/account/findId.html
@@ -3,34 +3,6 @@
 
 <head>
     <div th:replace="/layouts/defaultLayout.html :: head"></div>
-    <!-- 사용자 JS -->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-    <script>
-        $(".find_id_btn").click(function () {
-            let email = $(".user_email").val();
-            let name = $(".user_name").val();
-
-            $.ajax({
-                type: "post",
-                url: "/find/id",
-                data: {
-                    "email": email,
-                    "name": name
-                },
-                success: function (res) {
-                    if (res === "fail") {
-                        $(".message_box_fail").css("display", "block");
-                        $(".message_box_success").css("display", "none");
-                        $(".message_fail").html("일치하는 정보가 없습니다.");
-                    } else {
-                        $(".message_box_success").css("display", "block");
-                        $(".message_box_fail").css("display", "none");
-                        $(".message_success").html("회원님의 아이디는 " + res + " 입니다.");
-                    }
-                }
-            })
-        })
-    </script>
 </head>
 
 <body>
@@ -91,7 +63,7 @@
                                 </tbody>
                             </table>
                             <div class="btn_box">
-                                <button class="find_id_btn black_btn" type="button">아이디 찾기</button>
+                                <button class="find_id_btn black_btn_w130_h40" type="button">아이디 찾기</button>
                             </div>
                         </form>
                     </div>
@@ -101,4 +73,33 @@
             <div th:replace="/layouts/defaultLayout.html :: footer"></div>
         </article>
     </main>
+
+    <!-- 사용자 JS -->
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script>
+        $(".find_id_btn").click(function () {
+            let email = $(".user_email").val();
+            let name = $(".user_name").val();
+
+            $.ajax({
+                type: "post",
+                url: "/find/id",
+                data: {
+                    "email": email,
+                    "name": name
+                },
+                success: function (res) {
+                    if (res === "fail") {
+                        $(".message_box_fail").css("display", "block");
+                        $(".message_box_success").css("display", "none");
+                        $(".message_fail").html("일치하는 정보가 없습니다.");
+                    } else {
+                        $(".message_box_success").css("display", "block");
+                        $(".message_box_fail").css("display", "none");
+                        $(".message_success").html("회원님의 아이디는 " + res + " 입니다.");
+                    }
+                }
+            })
+        })
+    </script>
 </body>
