--- a/src/main/resources/templates/account/signUp.html
+++ b/src/main/resources/templates/account/signUp.html
@@ -16,7 +16,7 @@
             <section id="signup">
                 <div class="container signup">
                     <div class="signup_header">
-                        <h2>SIGNUP</h2>
+                        <h2>JOIN</h2>
                         <div class="divider"></div>
                     </div>
                     <div class="signup_body mt-5">
@@ -34,8 +34,8 @@
                                         </th>
                                         <td>
                                             <div class="id_input_box">
-                                                <input class="id_input" th:field="*{userIdentifier}" type="text" minlength="5"
-                                                    maxlength="20">
+                                                <input class="id_input" th:field="*{userIdentifier}" type="text"
+                                                    minlength="5" maxlength="20">
                                                 (영문 소문자/숫자, 5~20자)
                                             </div>
                                             <span class="id_input_re_1 text-success">사용 가능한 아이디입니다.</span>
@@ -62,8 +62,8 @@
                                         </th>
                                         <td>
                                             <div class="password_confirm_input_box">
-                                                <input class="pwck_input" th:field="*{passwordConfirm}"
-                                                    type="password" minlength="8" maxlength="20">
+                                                <input class="pwck_input" th:field="*{passwordConfirm}" type="password"
+                                                    minlength="8" maxlength="20">
                                                 (영문 대소문자/숫자, 8~20자)
                                             </div>
                                             <span class="pwck_input_re_1 text-success">비밀번호가 일치합니다.</span>
@@ -119,7 +119,7 @@
                                 </tbody>
                             </table>
                             <div class="btn_box">
-                                <button class="signup_btn black_btn" type="submit">회원가입</button>
+                                <button class="signup_btn black_btn_w130_h40" type="submit">회원가입</button>
                             </div>
                         </form>
                     </div>
