--- a/src/main/resources/templates/order/orderHist.html
+++ b/src/main/resources/templates/order/orderHist.html
@@ -3,8 +3,6 @@
 
 <head>
     <div th:replace="/layouts/defaultLayout.html :: head"></div>
-    <!-- 사용자 JS -->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 
 <body>
@@ -56,7 +54,8 @@
                                             </td>
                                             <td class="state">배송중</td>
                                             <td>
-                                                <button class="black_btn_w65_h30">주문 취소</button>
+                                                <button th:if="${order.orderStatus == T(com.windsome.constant.OrderStatus).ORDER}" class="black_btn_w65_h30" type="button" th:value="${order.orderId}" onclick="cancelOrder(this.value)">주문 취소</button>
+                                                <div th:unless="${order.orderStatus == T(com.windsome.constant.OrderStatus).ORDER}">취소 완료</div>
                                             </td>
                                         </th:block>
                                     </tr>
@@ -107,6 +106,38 @@
             <div th:replace="/layouts/defaultLayout.html :: footer"></div>
         </article>
     </main>
+
+    <!-- 사용자 JS -->
+    <script th:inline="javascript">
+        function cancelOrder(orderId) {
+            let paramData = {
+                orderId : orderId,
+            };
+
+            let param = JSON.stringify(paramData);
+
+            $.ajax({
+                url : "/order/" + orderId + "/cancel",
+                type : "POST",
+                contentType : "application/json",
+                data : param,
+                dataType : "json",
+                cache : false,
+                success: function (result, status) {
+                    alert("주문이 취소 되었습니다.");
+                    location.href = '/orders/' + [[${page}]];
+                },
+                error: function (jqXHR, status, error) {
+                    if (jqXHR.status === '401') {
+                        alert('로그인 후 이용해주세요.');
+                        location.href = '/login';
+                    } else {
+                        alert(jqXHR.responseText);
+                    }
+                },
+            })
+        }
+    </script>
 </body>
 
 </html>
