--- a/src/main/resources/static/css/pages/_itemDtl.scss
+++ b/src/main/resources/static/css/pages/_itemDtl.scss
@@ -97,7 +97,7 @@
             }
         }
 
-        .total_price {
+        .total_box {
             margin: 0;
             padding: 25px 4px 25px;
             color: #333;
@@ -105,16 +105,13 @@
             vertical-align: middle;
             background: #fff;
             text-align: right;
+            font-size: 12px;
+            color: #000;
 
-            span {
-                font-size: 12px;
-                color: #000;
-
-                strong em {
-                    font-style: normal;
-                    font-size: 17px;
-                    padding: 0 5px 0 20px;
-                }
+            strong em {
+                font-style: normal;
+                font-size: 17px;
+                padding: 0 5px 0 20px;
             }
         }
 
@@ -185,7 +182,7 @@
                     display: flex;
 
                     input {
-                        width: 30px;
+                        width: 35px;
                         height: 25px;
                         line-height: 20px;
                         border: 1px solid #CCCCCC;
